spacing fixes

--- a/scss/tab-contents.scss
+++ b/scss/tab-contents.scss
@@ -38,12 +38,7 @@
             padding-top: 20px;
         }
 
-        .container-custom {
-            @media ($lg-1200) {
-                padding-left: 40px;
-                padding-right: 40px;
-            }
-        }
+        
     }
 
     .nav-tabs {
